single item working thanks to Anil

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -7,7 +7,7 @@
 	<h1>Ramen Results!<h1>
 	<ul>
 	 	<% ramenResults.forEach(function (ramen) {%>
-	 		<li><a href="/results/<%= ramen.id %>"><%= ramen.name %><br>
+	 		<li><a href="/ramen/<%= ramen.id %>"><%= ramen.name %><br>
 	 		<%= ramen.venue.name %><br>
 
 
