--- a/views/single_result.ejs
+++ b/views/single_result.ejs
@@ -4,6 +4,12 @@
 	<title></title>
 </head>
 <body>
+		<h1> <%= ramenResult.name %><h1>
+	<ul>
+	 	
+	 		<h2><%= ramenResult.venue.name %></h2>
+
+ 	</ul>
 
 </body>
 </html>
