--- a/views/saved_spots.ejs
+++ b/views/saved_spots.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+	<title>Ramen Hunter</title>
+
 </head>
 <body>
 
