--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+	<title>Ramen Hunter</title>
+
 </head>
 <body>
-
+	<h1>Sign up because you have to</h1>
+	<form method="post" action="/signup">
+		<input type="text" placeholder="username" name="username">
+		<input type="text" placeholder="password" name="password">
+		<input type="submit" value="Was that really that hard?">
+	</form>
 </body>
 </html>
