--- a/views/single_result.ejs
+++ b/views/single_result.ejs
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+	<meta charset=utf-8 />
 	<title>Ramen Hunter</title>
-
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.css' rel='stylesheet' />
+<style>
+  body { margin:0; padding:0; }
+  #map { height: 500px; width:500px; margin: 20px; }
+</style>
 </head>
 <body>
 
@@ -12,17 +19,47 @@
 	 	<% ramenResult.forEach(function (ramen) {%>
 		<h1> <%= ramen.venue.name %><h1>
 			<ul>
-		 		<li><%= ramen.name %></li>
-		 		<li><%= ramen.venue.name %></li>
-		 		<li><%= ramen.price %></li>
-		 		<li><%= ramen.venue.localitry %></li>
+		 		<li>Name: <%= ramen.name %></li>
+		 		<li>Eatery: <%= ramen.venue.name %></li>
+		 		<li>Price: $<%= ramen.price %></li>
+		 		<li>Location: <%= ramen.venue.locality %></li>
 		 	</ul>
 
-	 		
-
 	 	<% }) %> 
- 	
+	 	<form method="post" action="!not sure yet!">
+	 		<input type="rating" value="">
 
+<div id='map'></div>
+
+<script>
+L.mapbox.accessToken = 'pk.eyJ1IjoiZG9yaXBzMTMiLCJhIjoic0FNRE51byJ9.SSNLexDQmGPKXiJ1TH4lvw';
+var map = L.mapbox.map('map', 'examples.map-20v6611k')
+    .setView(['<%= ramenResult[0].venue.lat %>', '<%= ramenResult[0].venue.long %>'], 16);
+
+L.mapbox.featureLayer({
+    // this feature is in the GeoJSON format: see geojson.org
+    // for the full specification
+    type: 'Feature',
+    geometry: {
+        type: 'Point',
+        // coordinates here are in longitude, latitude order because
+        // x, y is the standard for GeoJSON and many formats
+        coordinates: [
+          '<%= ramenResult[0].venue.lat %>',
+          '<%= ramenResult[0].venue.long %>' 
+        ]
+    },
+    properties: {
+        title: '<%= ramenResult[0].venue.name %>',
+        description: '<%= ramenResult[0].venue.street_name %>',
+        // one can customize markers by adding simplestyle properties
+        // https://www.mapbox.com/foundations/an-open-platform/#simplestyle
+			    "marker-symbol": "star",
+			    "marker-size": "medium",
+			    "marker-color": "#f44"
+    }
+}).addTo(map);
+</script>
  
 
 </body>
