--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,20 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
 	<title>Ramen Hunter</title>
 
 </head>
 <body>
+<!--Nav Bar -->
+<nav class="top-bar" data-topbar>
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">Ramen Hunter</a></h1>
+    </li>
+     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
+  </ul>
 
-	<form method="post" action="login">
-		<input type="text" placeholder="username" name="username">
-		<input type="text" placeholder="password" name="password">
-		<input type="submit" value="Sign Me In!">
-	</form>
-	<form method="post" action="/search">
-		<input type="text" placeholder="San Francisco" name="location">
-		<input type="submit" value="Show Me the Ramen!">
-	</form>
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+     <li>
+      <form method="get" action="/signup">
+				<input type="submit" class="button" value="Sign me up!">
+			</form>
+			</li>
+      <li class="has-form">
+        <form method="post" action="login">
+					<input type="text" placeholder="username" name="username"><br>
+					<input type="text" placeholder="password" name="password"><br>
+					<input type="submit" class="button" value="Sign Me In!">
+				</form>
+      </li>
+    </ul>
+
+    <!-- Left Nav Section -->
+    <ul class="left">
+      <li>
+			</li>
+    </ul>
+  </section>
+</nav>
+<!--Nav Bar -->
+	
+<div class="row">
+  <div class="small-2 large-4 columns"></div>
+  <div class="small-4 large-4 columns">
+  	<form method="post" action="/search">
+			<input type="text" placeholder="San Francisco" name="location">
+			<input type="submit" class="button"  value="Show Me the Ramen!">
+		</form>
+	</div>
+  <div class="small-6 large-4 columns"></div>
+</div>
+
 </body>
 </html>
