--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
 	<title>Ramen Hunter</title>
 
 </head>
 <body>
-	<h1>Ramen Results!<h1>
-	<ul>
-	 	<% ramenResults.forEach(function (ramen) {%>
-	 		<li><a href="/ramen/<%= ramen.id %>"><%= ramen.name %><br>
-	 		<%= ramen.venue.name %><br>
 
+<div class="row">
+	  <div class="small-2 large-4 columns"></div>
+	  <div class="small-4 large-4 columns">
+		 <h1>Ramen Results!<h1>
+			<ul>
+			 	<% ramenResults.forEach(function (ramen) {%>
+			 		<li><a href="/ramen/<%= ramen.id %>"><%= ramen.name %><br>
+			 		<%= ramen.venue.name %><br>
 
-
-	 		</li>
-
-	 	<% }) %> 
-	 	</ul>
+			 		</li>
+				 	<% }) %> 
+			 	</ul>
+		</div>
+	  <div class="small-6 large-4 columns"></div>
+		</div>
+	
 </body>
 </html>
