--- a/views/saved_spots.ejs
+++ b/views/saved_spots.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
 	<title>Ramen Hunter</title>
 
 </head>
