--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
 	<title>Ramen Hunter</title>
 
 </head>
 <body>
+<div class="row">
+	  <div class="small-2 large-4 columns"></div>
+	  <div class="small-4 large-4 columns">
+		  <form method="post" action="/signup">
+				<input type="text" placeholder="username" name="username">
+				<input type="text" placeholder="password" name="password">
+				<input type="submit" class="button"  value="Was that really that hard?">
+			</form>
+		</div>
+	  <div class="small-6 large-4 columns"></div>
+		</div>
 	<h1>Sign up because you have to</h1>
-	<form method="post" action="/signup">
-		<input type="text" placeholder="username" name="username">
-		<input type="text" placeholder="password" name="password">
-		<input type="submit" value="Was that really that hard?">
-	</form>
+	
 </body>
 </html>
