--- a/views/results.ejs
+++ b/views/results.ejs
@@ -11,11 +11,10 @@
 	  <div class="small-2 large-4 columns"></div>
 	  <div class="small-4 large-4 columns">
 		 <h1>Ramen Results!<h1>
-			<ul>
+			<ul class="inline-list">
 			 	<% ramenResults.forEach(function (ramen) {%>
-			 		<li><a href="/ramen/<%= ramen.id %>"><%= ramen.name %><br>
-			 		<%= ramen.venue.name %><br>
-
+			 		<li><a href="/ramen/<%= ramen.id %>"><%= ramen.name %> -
+			 		<%= ramen.venue.name %>
 			 		</li>
 				 	<% }) %> 
 			 	</ul>
