--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,7 +9,7 @@
 <div class="row">
 	  <div class="small-2 large-4 columns"></div>
 	  <div class="small-4 large-4 columns">
-		  <form method="post" action="/signup">
+		  <form method="post" action="/create">
 				<input type="text" placeholder="username" name="username">
 				<input type="text" placeholder="password" name="password">
 				<input type="submit" class="button"  value="Was that really that hard?">
