--- a/views/single_result_si.ejs
+++ b/views/single_result_si.ejs
@@ -1,3 +1,5 @@
+<!-- to figure out if needed -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,7 +18,6 @@
 	<div class="row">
 	  <div class="small-2 large-4 columns"></div>
 	  <div class="small-4 large-4 columns">
-				 
 				 	<% ramenResult.forEach(function (ramen) {%>
 					<h1> <%= ramen.venue.name %><h1>
 						<ul>
@@ -25,14 +26,17 @@
 					 		<li>Price: $<%= ramen.price %></li>
 					 		<li>Location: <%= ramen.venue.locality %></li>
 					 	</ul>
-				 	<% }) %> 
-				 <h3> Rate this Ramen</h3>
-				 
 
+				 	<% }) %> 
+				 <div class="range-slider" data-slider data-options="start: 1; end: 10;">
+				  <span class="range-slider-handle"></span>
+				  <span class="range-slider-active-segment"></span>
+				  <input type="hidden">
+				</div>
 			<div id='map'></div>
 		  
 		</div>
-	  	<div class="small-6 large-4 columns"></div>
+	  <div class="small-6 large-4 columns"></div>
 		</div>
 
 <script>
