got authorize/authenticate working

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,9 +23,9 @@
      <li>
 			</li>
       <li class="has-form">
-        <form method="post" action="login">
+        <form method="post" action="/login">
 					<li><input type="text" placeholder="username" name="username"></li>
-					<li><input type="text" placeholder="password" name="password"></li>
+					<li><input type="password" placeholder="password" name="password"></li>
 					<li><input type="submit" class="button" value="Sign Me In!"></li>
 				</form>
       </li>
