--- a/views/single_result.ejs
+++ b/views/single_result.ejs
@@ -26,11 +26,12 @@
 					 		<li>Location: <%= ramen.venue.locality %></li>
 					 	</ul>
 				 	<% }) %> 
-				 <h3> Rate this Ramen</h3>
 				 
 
 			<div id='map'></div>
-		  
+				<% if (isAuthenticated) { %> 
+				 <h3> Rate this Ramen</h3>
+				<% } %>  
 		</div>
 	  	<div class="small-6 large-4 columns"></div>
 		</div>
