--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>Ramen Hunter</title>
 
 </head>
@@ -45,8 +45,8 @@
 	
 <div class="row">
   <div class="small-2 large-4 columns"></div>
-  <div class="small-4 large-4 columns">
-  	<form method="post" action="/search">
+  <div id="form-wrapper" class="small-4 large-4 columns">
+  	<form id="search-bar" method="post" action="/search">
 			<input type="text" placeholder="San Francisco" name="location">
 			<input type="submit" class="button"  value="Show Me the Ramen!">
 		</form>
