--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,7 +11,7 @@
 	  <div class="small-4 large-4 columns">
 		  <form method="post" action="/create">
 				<input type="text" placeholder="username" name="username">
-				<input type="" placeholder="password" name="password">
+				<input type="password" placeholder="password" name="password">
 				<input type="submit" class="button"  value="Was that really that hard?">
 			</form>
 		</div>
