--- a/views/single_result_sinotneeded.ejs
+++ b/views/single_result_sinotneeded.ejs
@@ -23,6 +23,7 @@
 						<ul>
 					 		<li>Name: <%= ramen.name %></li>
 					 		<li>Eatery: <%= ramen.venue.name %></li>
+					 		<li>Name: <%= ramen.description %></li>
 					 		<li>Price: $<%= ramen.price %></li>
 					 		<li>Location: <%= ramen.venue.locality %></li>
 					 	</ul>
