--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,46 +7,15 @@
 
 </head>
 <body>
-<!--Nav Bar -->
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="#">Ramen Hunter</a></h1>
-    </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
-  </ul>
-
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-     <li>
-			</li>
-      <li class="has-form">
-        <form method="post" action="/login">
-					<li><input type="text" placeholder="username" name="username"></li>
-					<li><input type="password" placeholder="password" name="password"></li>
-					<li><input type="submit" class="button" value="Sign Me In!"></li>
-				</form>
-      </li>
-    </ul>
-
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li>
-       <form method="get" action="/signup">
-				<input type="submit" class="button" value="Sign me up!">
-			</form>
-			</li>
-    </ul>
-  </section>
-</nav>
-<!--Nav Bar -->
-	
+<% if (isAuthenticated) { %> 
+<%- include partials/signed_in_nav.ejs %>
+<% }else{ %>
+<%- include partials/not_signed_in_nav.ejs %>
+<% } %>
 <div class="row">
   <div class="small-2 large-4 columns"></div>
   <div id="form-wrapper" class="small-4 large-4 columns">
-  	<form id="search-bar" method="post" action="/search">
+  	<form id="center-form" method="post" action="/search">
 			<input type="text" placeholder="San Francisco" name="location">
 			<input type="submit" class="button"  value="Show Me the Ramen!">
 		</form>
