--- a/views/results.ejs
+++ b/views/results.ejs
@@ -2,14 +2,19 @@
 <html>
 <head>
 	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>Ramen Hunter</title>
 
 </head>
 <body>
-
+<% if (isAuthenticated) { %> 
+<%- include partials/signed_in_nav.ejs %>
+<% }else{ %>
+<%- include partials/not_signed_in_nav.ejs %>
+<% } %>
 <div class="row">
 	  <div class="small-2 large-4 columns"></div>
-	  <div class="small-4 large-4 columns">
+	  <div id="form-wrapper" class="small-4 large-4 columns">
 		 <h1>Ramen Results!<h1>
 			<ul class="inline-list">
 			 	<% ramenResults.forEach(function (ramen) {%>
