--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,14 +2,18 @@
 <html>
 <head>
 	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>Ramen Hunter</title>
 
 </head>
 <body>
+
+<%- include partials/signup_nav.ejs %>
+
 <div class="row">
 	  <div class="small-2 large-4 columns"></div>
-	  <div class="small-4 large-4 columns">
-		  <form method="post" action="/create">
+	  <div id="form-wrapper" class="small-4 large-4 columns">
+		  <form id="center-form" method="post" action="/create">
 				<input type="text" placeholder="username" name="username">
 				<input type="password" placeholder="password" name="password">
 				<input type="submit" class="button"  value="Was that really that hard?">
