--- a/views/single_result.ejs
+++ b/views/single_result.ejs
@@ -13,14 +13,20 @@
 </style>
 </head>
 <body>
+<% if (isAuthenticated) { %> 
+<%- include partials/signed_in_nav.ejs %>
+<% }else{ %>
+<%- include partials/not_signed_in_nav.ejs %>
+
 	<div class="row">
 	  <div class="small-2 large-4 columns"></div>
-	  <div class="small-4 large-4 columns">
+	  <div id="form-wrapper" class="small-4 large-4 columns">
 				 
 				 	<% ramenResult.forEach(function (ramen) {%>
 					<h1> <%= ramen.venue.name %><h1>
 						<ul>
 					 		<li>Name: <%= ramen.name %></li>
+					 		<li>Description: <%= ramen.description %></li>
 					 		<li>Eatery: <%= ramen.venue.name %></li>
 					 		<li>Price: $<%= ramen.price %></li>
 					 		<li>Location: <%= ramen.venue.locality %></li>
@@ -30,6 +36,7 @@
 
 			<div id='map'></div>
 
+<% } %>
 		</div>
 	  	<div class="small-6 large-4 columns"></div>
 		</div>
@@ -48,8 +55,8 @@ L.mapbox.featureLayer({
         // coordinates here are in longitude, latitude order because
         // x, y is the standard for GeoJSON and many formats
         coordinates: [
-          '<%= ramenResult[0].venue.lat %>',
-          '<%= ramenResult[0].venue.long %>' 
+          '<%= ramenResult[0].venue.long %>', 
+          '<%= ramenResult[0].venue.lat %>'
         ]
     },
     properties: {
