--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" href="/css/style.css">
 	<title>Ramen Hunter</title>
 
-</head>
-<body>
+<%- include partials/mapbox_head.ejs %>
+
 <% if (isAuthenticated) { %> 
 <%- include partials/signed_in_nav.ejs %>
 <% }else{ %>
@@ -18,6 +18,9 @@
   	<form id="center-form" method="post" action="/search">
 			<input type="text" placeholder="San Francisco" name="location">
 			<input type="submit" class="button"  value="Show Me the Ramen!">
+		</form>
+		<form id="center-form" method="post" action="/curLoc">
+			<input type="submit" class="button"  value="Find Ramen Near Me">
 		</form>
 	</div>
   <div class="small-6 large-4 columns"></div>
