--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,8 @@
 <head>
 	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
 	<link rel="stylesheet" href="/css/style.css">
-	<title>Ramen Hunter</title>
+
+	<%- include partials/geolocation.ejs %>
 
 <%- include partials/mapbox_head.ejs %>
 
@@ -12,19 +13,32 @@
 <% }else{ %>
 <%- include partials/not_signed_in_nav.ejs %>
 <% } %>
+
 <div class="row">
   <div class="small-2 large-4 columns"></div>
+
   <div id="form-wrapper" class="small-4 large-4 columns">
-  	<form id="center-form" method="post" action="/search">
+
+ 		<form id="center-form" class="search-form" method="post" action="/search">
 			<input type="text" placeholder="San Francisco" name="location">
 			<input type="submit" class="button"  value="Show Me the Ramen!">
 		</form>
-		<form id="center-form" method="post" action="/curLoc">
-			<input type="submit" class="button"  value="Find Ramen Near Me">
+
+		<form id="search_by_loc" class="search-form">
+		  <input type="hidden" value="" id="">
+			<input type="submit" class="button" value="Find Ramen Near Me">
 		</form>
+
+
 	</div>
   <div class="small-6 large-4 columns"></div>
 </div>
-
+		<div id='map'></div>
+<script>
+window.onload = function () {
+    geoFindMe()
+}
+</script>
 </body>
 </html>
+
