--- a/views/partials/mapbox_head.ejs
+++ b/views/partials/mapbox_head.ejs
@@ -5,7 +5,7 @@
 			<link href='https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.css' rel='stylesheet' />
 				<style>
 				  body { margin:0; padding:0; }
-				  #map { height: 500px; width:500px; margin: 20px; }
+				  #map { height: 500px; width:100%; }
 				</style>
 			</head>
 		<body>
