--- a/views/single_result.ejs
+++ b/views/single_result.ejs
@@ -12,6 +12,8 @@
 <% }else{ %>
 <%- include partials/not_signed_in_nav.ejs %>
 
+<% } %>
+
 	<div class="row">
 	  <div class="small-2 large-4 columns"></div>
 	  <div id="form-wrapper" class="small-4 large-4 columns">
@@ -26,11 +28,19 @@
 					 		<li>Location: <%= ramen.venue.locality %></li>
 					 	</ul>
 				 	<% }) %> 
-				 
+				
+				 <% if (isAuthenticated) { %> 
 
+					 <div class="rating">
+						<span>☆</span>
+						<span>☆</span>
+						<span>☆</span>
+						<span>☆</span>
+						<span>☆</span>
+					</div>
+
+				 <% } %>
 			<div id='map'></div>
-
-<% } %>
 		</div>
 	  	<div class="small-6 large-4 columns"></div>
 		</div>
