cool button onlocation

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
 			<input type="submit" class="button"  value="Show Me the Ramen!">
 		</form>
 
-		<form method="post" action="/geo" id="search_by_loc" class="search-form">
+		<form method="post" style="visibility:hidden" action="/geo" id="search_by_loc" class="search-form">
 		  <input type="hidden" id="curr_lat" name="location[lat]">
 		  <input type="hidden" id="curr_long" name="location[long]">
 			<input type="submit" class="button" value="Find Ramen Near Me">
