--- a/views/results.ejs
+++ b/views/results.ejs
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" href="/css/style.css">
 	<title>Ramen Hunter</title>
 
-</head>
-<body>
+<%- include partials/mapbox_head.ejs %>
+
 <% if (isAuthenticated) { %> 
 <%- include partials/signed_in_nav.ejs %>
 <% }else{ %>
@@ -15,6 +15,7 @@
 <div class="row">
 	  <div class="small-2 large-4 columns"></div>
 	  <div id="form-wrapper" class="small-4 large-4 columns">
+
 		 <h1>Ramen Results!<h1>
 			<ul class="inline-list">
 			 	<% ramenResults.forEach(function (ramen) {%>
@@ -28,6 +29,6 @@
 		</div>
 	  <div class="small-6 large-4 columns"></div>
 		</div>
-	
+ 
 </body>
 </html>
