--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,17 +3,21 @@
 	margin: 10em 0;
 }
 .search-form {
-	
 	position: absolute; left: 15em;
 	z-index: 2;
 	margin: auto;
 	width: 50%;
 }
+#results_body {
+	background: fixed url(http://1.bp.blogspot.com/-km9eM3hFac0/Tlw93ueTqOI/AAAAAAAAEPU/LYhBIrITHTo/s1600/Totto+Ramen_8-19-2011-32.jpg);
+}
 
-/*#center-form {
-	margin: auto;
-	width: 50%;
-}*/
+#results {
+	padding-top: 2em;
+	text-align: center;
+	width:100%;
+	background-color: rgba(225,225,225,0.7);
+}
 
 #search_by_loc {
 	top: 120px;
@@ -22,85 +26,16 @@
 * {
 	text-align: center
 }
+#single_r_map {
+	width: 50%;
+}
+
 #map {
 	position: absolute; top: 4em; 
  	z-index: 1;
 	width:100%;
 		margin: auto;
 }
-
-.rating {
-  unicode-bidi: bidi-override;
-  direction: rtl;
-}
-.rating > span {
-  display: inline-block;
-  position: relative;
-  width: 1.1em;
-}
-.rating > span:hover:before,
-.rating > span:hover ~ span:before {
-   content: "\2605";
-   position: absolute;
-}
-
-* {
-	text-align: center
-}
-/*for rating*/
-
-.rating {
-    float:left;
-}
-
-/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t 
-   follow these rules. Every browser that supports :checked also supports :not(), so
-   it doesn’t make the test unnecessarily selective */
-.rating:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-    clip:rect(0,0,0,0);
-}
-
-.rating:not(:checked) > label {
-    float:right;
-    width:1em;
-    padding:0 .1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:200%;
-    line-height:1.2;
-    color:#ddd;
-    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating:not(:checked) > label:before {
-    content: '★ ';
-}
-
-.rating > input:checked ~ label {
-    color: #f70;
-    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating:not(:checked) > label:hover,
-.rating:not(:checked) > label:hover ~ label {
-    color: gold;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating > input:checked + label:hover,
-.rating > input:checked + label:hover ~ label,
-.rating > input:checked ~ label:hover,
-.rating > input:checked ~ label:hover ~ label,
-.rating > label:hover ~ input:checked ~ label {
-    color: #ea0;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating > label:active {
-    position:relative;
-    top:2px;
-    left:2px;
+ul {
+	list-style-type: none;
 }
