--- a/views/results.ejs
+++ b/views/results.ejs
@@ -4,30 +4,32 @@
 	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
 	<link rel="stylesheet" href="/css/style.css">
 	<title>Ramen Hunter</title>
+</head>
+	<body id="results_body">
 
-<%- include partials/mapbox_head.ejs %>
-
-<% if (isAuthenticated) { %> 
-<%- include partials/signed_in_nav.ejs %>
-<% }else{ %>
-<%- include partials/not_signed_in_nav.ejs %>
-<% } %>
-<div class="row">
-	  <div class="small-2 large-4 columns"></div>
-	  <div id="form-wrapper" class="small-4 large-4 columns">
-
-		 <h1>Ramen Results!<h1>
-			<ul class="inline-list">
-			 	<% ramenResults.forEach(function (ramen) {%>
-			 		<p><a href="/ramen/<%= ramen.id %>">
-			 		<h3><%= ramen.name %></h3>
-			 		<h4><%= ramen.venue.name %></h4>
-			 		<br>
-			 		</p>
-				 	<% }) %> 
-			 	</ul>
-		</div>
-	  <div class="small-6 large-4 columns"></div>
+	<% if (isAuthenticated) { %> 
+	<%- include partials/signed_in_nav.ejs %>
+	<% }else{ %>
+	<%- include partials/not_signed_in_nav.ejs %>
+	<% } %>
+	<div class="row">
+		  <div class="small-2 large-4 columns"></div>
+		  <div id="results" class="small-4 large-4 columns">
+			  <container id="results">
+				 <h1>Ramem Hunt Complete!<h1>
+				 <h3>Commence Selection and Consumption</h3>
+					<ul class="inline-list">
+					 	<% ramenResults.forEach(function (ramen) {%>
+					 		<p><a href="/ramen/<%= ramen.id %>">
+					 		<h3><%= ramen.name %></h3></a>
+					 		<h4><%= ramen.venue.name %></h4>
+					 		<br>
+					 		</p>
+						 	<% }) %> 
+					 	</ul>
+				 	</container>
+			</div>
+		  <div class="small-6 large-4 columns"></div>
 		</div>
  
 </body>
