style mostly done

--- a/views/single_result.ejs
+++ b/views/single_result.ejs
@@ -14,8 +14,8 @@
 
 <% } %>
 
-	<div class="row">
-	  <div id="form-wrapper" class="large-6 columns">
+	<div style="margin-top: 2em" class="row">
+	  <div class="large-6 columns">
 				 	<% ramenResult.forEach(function (ramen) {%>
 					<h1> <%= ramen.venue.name %><h1>
 						<ul>
