--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
   <div id="form-wrapper" class="small-4 large-4 columns">
 
  		<form id="center-form" class="search-form" method="post" action="/search">
-			<input type="text" placeholder="San Francisco" name="location">
+			<input type="text" placeholder="Example: San Francisco" name="location">
 			<input type="submit" class="button"  value="Show Me the Ramen!">
 		</form>
 
