--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,22 +6,23 @@
 	<title>Ramen Hunter</title>
 
 </head>
-<body>
+<body id="results_body">
 
 <%- include partials/signup_nav.ejs %>
 
 <div class="row">
-	  <div class="small-2 large-4 columns"></div>
-	  <div id="form-wrapper" class="small-4 large-4 columns">
-		  <form id="center-form" method="post" action="/create">
-				<input type="text" placeholder="username" name="username">
-				<input type="password" placeholder="password" name="password">
-				<input type="submit" class="button"  value="Was that really that hard?">
-			</form>
-		</div>
-	  <div class="small-6 large-4 columns"></div>
-		</div>
-	<h1>Sign up because you have to</h1>
+  <div class="small-2 large-4 columns"></div>
+  <div id="results" class="small-4 large-4 columns">
+		<h3>Sign up, because what site doesn't make you?</h3>
+	  <form id="signup_form" method="post" action="/create">
+			<input type="text" placeholder="username" name="username">
+			<input type="password" placeholder="password" name="password">
+			<input type="submit" class="button"  value="Was that really that hard?">
+		</form>
+		<br>
+	</div>
+  <div class="small-6 large-4 columns"></div>
+	</div>
 	
 </body>
 </html>
