--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,8 +21,8 @@
 #results {
 	padding-top: 2em;
 	text-align: center;
-	height:100%	;
-	width:100%;
+	height: 100%	;
+	width: 100%;
 	background-color: rgba(225,225,225,0.7);
 }
 
@@ -40,9 +40,9 @@
 #map {
 	position: absolute; top: 4em; 
  	z-index: 1;
-	width:100%;
+	width: 100%;
 		margin: auto;
 }
-ul {
-	list-style-type: none;
+.row {
+	height: 100%;
 }
