--- a/views/results.ejs
+++ b/views/results.ejs
@@ -15,19 +15,24 @@
 	<div class="row">
 		  <div class="small-2 large-4 columns"></div>
 		  <div id="results" class="small-4 large-4 columns">
-			  <container id="results">
-				 <h1>Ramem Hunt Complete!<h1>
-				 <h3>Commence Selection and Consumption</h3>
-					<ul class="inline-list">
-					 	<% ramenResults.forEach(function (ramen) {%>
+			 <h1>Ramen Hunt Complete!<h1>
+			 <h3>Commence Selection and Consumption</h3>
+				<ul class="inline-list">		
+					<% if (ramenResults.length < 1) { %>
+						<h2>Based on your location you should probably move.</h2>
+						<h3>Seriously, no ramen found.</h3>
+					<% } %>
+
+
+				 	<% ramenResults.forEach(function (ramen) {%>
 					 		<p><a href="/ramen/<%= ramen.id %>">
 					 		<h3><%= ramen.name %></h3></a>
 					 		<h4><%= ramen.venue.name %></h4>
 					 		<br>
 					 		</p>
-						 	<% }) %> 
-					 	</ul>
-				 	</container>
+		
+					<% }); %> 
+				 	</ul>
 			</div>
 		  <div class="small-6 large-4 columns"></div>
 		</div>
