--- a/views/results.ejs
+++ b/views/results.ejs
@@ -19,8 +19,8 @@
 			 <h3>Commence Selection and Consumption</h3>
 				<ul class="inline-list">		
 					<% if (ramenResults.length < 1) { %>
-						<h2>Based on your location you should probably move.</h2>
-						<h3>Seriously, no ramen found.</h3>
+						<h2>Based on your location you should probably move</h2>
+						<h3>Seriously, no ramen found sorry</h3>
 					<% } %>
 
 
