--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@
 }
 
 #results {
-	padding-top: 2em;
+	padding: 2em;
 	text-align: center;
 	height: 100%	;
 	width: 100%;
@@ -43,6 +43,6 @@
 	width: 100%;
 		margin: auto;
 }
-.row {
+/*.row {
 	height: 100%;
-}
+}*/
