--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,10 @@
 <% } %>
 
 <div class="row">
-  <div class="small-2 large-4 columns"></div>
+  <div class="small-2 large-4 columns">
+
+  
+  </div>
 
   <div id="form-wrapper" class="small-4 large-4 columns">
 
