--- a/views/partials/not_signed_in_nav.ejs
+++ b/views/partials/not_signed_in_nav.ejs
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="/">Ramen Hunter</a></h1>
+      <h1><a href="/">Ramen Hunter <i class="fa fa-spoon"></i></a></h1>
     </li>
     <li class="toggle-topbar"><a href="#"><span></span></a></li>
   </ul>
