--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,7 @@
 
 <%- include partials/signup_nav.ejs %>
 
-<div class="row">
+<div class="row" style="height: 100%;" >
   <div class="small-2 large-4 columns"></div>
   <div id="results" class="small-4 large-4 columns">
 		<h3>Sign up, because what site doesn't make you?</h3>
