--- a/views/single_result.ejs
+++ b/views/single_result.ejs
@@ -30,6 +30,7 @@
 				
 				 	<% if (isAuthenticated) { %> 
 
+				 	<h5> Rate This Ramen </h5>
 				 	<form method="post" action="/ramen/<%= ramen.id %>	">
 				 		<input id="rating1" type="range" name="score" min="1" max="5"/>
 				 		<input type="submit" value="Rate This Ramen">
