--- a/views/results.ejs
+++ b/views/results.ejs
@@ -15,14 +15,14 @@
 	<div class="row">
 		  <div class="small-2 large-4 columns"></div>
 		  <div id="results" class="small-4 large-4 columns">
-			 <h1>Ramen Hunt Complete!<h1>
-			 <h3>Commence Selection and Consumption</h3>
 				<ul class="inline-list">		
 					<% if (ramenResults.length < 1) { %>
 						<h2>Based on your location you should probably move</h2>
 						<h3>Seriously, no ramen found sorry</h3>
-					<% } %>
-
+					<% } else { %>
+			 <h1>Ramen Hunt Complete!<h1>
+			 <h3>Commence Selection and Consumption</h3>
+			 		<% } %>
 
 				 	<% ramenResults.forEach(function (ramen) {%>
 					 		<p><a href="/ramen/<%= ramen.id %>">
