more fixes again

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -18,7 +18,7 @@
 				<ul class="inline-list">		
 					<% if (ramenResults.length < 1) { %>
 						<h2>Based on your location you should probably move</h2>
-						<h3>Seriously, no ramen found sorry</h3>
+						<h3>Seriously, no ramen found</h3>
 					<% } else { %>
 			 <h1>Ramen Hunt Complete!<h1>
 			 <h3>Commence Selection and Consumption</h3>
