--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
-	<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
+<link rel="stylesheet" href="/css/style.css">
 
-	<%- include partials/geolocation.ejs %>
+<%- include partials/geolocation.ejs %>
 
 <%- include partials/mapbox_head.ejs %>
 
-<% if (isAuthenticated) { %> 
-<%- include partials/signed_in_nav.ejs %>
+<% if (isAuthenticated) { %>
+	<%- include partials/signed_in_nav.ejs %>
 <% }else{ %>
-<%- include partials/not_signed_in_nav.ejs %>
+	<%- include partials/not_signed_in_nav.ejs %>
 <% } %>
 
 <div class="row">
   <div class="small-2 large-4 columns">
 
-  
+
   </div>
 
   <div id="form-wrapper" class="small-4 large-4 columns">
@@ -33,17 +33,14 @@
 			<input type="submit" class="button" value="Find Ramen Near Me">
 		</form>
 
-
 	</div>
   <div class="small-6 large-4 columns"></div>
 </div>
 		<div id='map'></div>
 <script>
 window.onload = function () {
-    geoFindMe()
-
-}
+    geoFindMe();
+};
 </script>
 </body>
 </html>
-
